--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from :"config.gradle"
 
 buildscript {
-    ext.kotlin_version = '1.2.61'
+    ext.kotlin_version = '1.3.0'
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3' //添加此行
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5' //添加此行
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0' //添加此行
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1' //添加此行
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,6 +24,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
