--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation project(":kommon")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation rootProject.ext.supportLibs
+    //implementation rootProject.ext.supportLibs
 
     // RxJava2
     implementation rootProject.ext.rxJavaLibs
