--- a/config.gradle
+++ b/config.gradle
@@ -56,24 +56,13 @@ ext {
     ]
 
     commonDeps = [
-            "rxPermission"          : "com.github.tbruyelle:rxpermissions:0.10.2",
-            "glide"                 : "com.github.bumptech.glide:glide:${dependVersion.glideSdkVersion}",
-            "brvh"                  : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.35',
-            "banner"                : 'cn.bingoogolapple:bga-banner:2.2.4@aar',
-            "agentweb"              : 'com.just.agentweb:agentweb:4.0.2',
-            "multidex"              : 'com.android.support:multidex:1.0.2',
-            //"vertical-tablayout": 'q.rorbin:VerticalTabLayout:1.2.5',
-            "flow-layout"           : 'com.hyman:flowlayout-lib:1.1.2',
-            "eventbus"              : 'org.greenrobot:eventbus:3.1.1',
-            //"bugly"           : 'com.tencent.bugly:crashreport:2.6.6.1',
-            "bugly-crash-up"        : 'com.tencent.bugly:crashreport_upgrade:1.3.5',
-            "swipeback"             : 'com.cxz:swipeback:1.0.1',
-            "material-dialogs"      : 'com.afollestad.material-dialogs:commons:0.9.4.4',
-            "logger"                : 'com.orhanobut:logger:2.1.1',
-            "litepal"               : 'org.litepal.android:core:2.0.0',
-            "fab"                   : 'com.github.clans:fab:1.6.4',
-            "materialdatetimepicker": 'com.wdullaer:materialdatetimepicker:3.6.4',
-            "android-autosize"      : 'me.jessyan:autosize:1.0.5'
+            "rxPermission": "com.github.tbruyelle:rxpermissions:0.10.2",
+            "glide"       : "com.github.bumptech.glide:glide:${dependVersion.glideSdkVersion}",
+            "multidex"    : 'com.android.support:multidex:1.0.2',
+            "eventbus"    : 'org.greenrobot:eventbus:3.1.1',
+            autosize      : "me.jessyan:autosize:1.0.1",
+            "gson"        : 'com.google.code.gson:gson:2.8.5'
+
     ]
 
     otherDeps = [
