引用方式优化

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,9 @@ android {
     defaultConfig {
         applicationId "com.luckyaf.kommonmaster"
         minSdkVersion 19
-        targetSdkVersion rootProject.ext.android.targetSdkVersion
-        versionCode rootProject.ext.android.versionCode
-        versionName rootProject.ext.android.versionName
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
 
@@ -27,14 +27,41 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(":kommon")
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$rootProject.kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$rootProject.kotlinVersion"
+
+    implementation "com.android.support:appcompat-v7:$rootProject.androidSupportVsersion"
+    implementation "com.android.support:cardview-v7:$rootProject.androidSupportVsersion"
+    implementation "com.android.support:design:$rootProject.androidSupportVsersion"
+    implementation "com.android.support:support-annotations:$rootProject.androidSupportVsersion"
+    implementation "com.android.support:recyclerview-v7:$rootProject.androidSupportVsersion"
+
+    implementation "com.android.support.constraint:constraint-layout:$rootProject.constraintLayoutVersion"
+
+
+    implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxAndroidVersion"
+    implementation "com.tbruyelle.rxpermissions2:rxpermissions:$rootProject.rxpermissions2Version"
+
+    implementation "org.greenrobot:eventbus:$rootProject.eventBusVersion"
+
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-scalars:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofitVersion"
+
+    implementation "com.luckyaf:kommon:0.0.6"
 
     //implementation rootProject.ext.supportLibs
 
-    // RxJava2
-    implementation rootProject.ext.rxJavaLibs
-    implementation rootProject.ext.commonLibs
 
 
 }
