--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,40 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply from :"config.gradle"
 
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    // Define versions in a single place
+    ext{
+        // Sdk and tools
+        compileSdkVersion = 28
+        minSdkVersion = 19
+        targetSdkVersion = 28
+        versionCode = 5
+        versionName = '0.0.5'
+        // App dependencies
+        androidSupportVsersion = '28.0.0'
+        constraintLayoutVersion = '1.1.3'
+        kotlinVersion = '1.3.11'
+        //
+        eventBusVersion = '3.1.1'
+
+        // rx   dependencies
+        rxJavaVersion = '2.2.3'
+        rxAndroidVersion = '2.1.0'
+        rxpermissions2Version = '0.9.5@aar'
+
+        // network dependencies
+        retrofitVersion = '2.4.0'
+
+
+
+        // test
+        junitVersion = '4.12'
+        runnerVersion = '1.0.2'
+        coreTestingVersion = '2.0.0'
+        espressoVersion = '3.0.2'
+        leakcanaryVersion = '1.6.1'
+
+    }
+    ext.kotlin_version = '1.3.11'
     repositories {
         google()
         jcenter()
@@ -10,10 +42,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4' //添加此行
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1' //添加此行
-
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,6 +55,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.google.com" }
         maven { url 'https://jitpack.io' }
     }
 }
