--- a/Kommon/build.gradle
+++ b/Kommon/build.gradle
@@ -109,11 +109,10 @@ bintray {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0"
-    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0"
+    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.kotlinCoroutinesVersion"
+    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.kotlinCoroutinesVersion"
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$rootProject.kotlinVersion"
     compileOnly "org.jetbrains.kotlin:kotlin-reflect:$rootProject.kotlinVersion"
-
     compileOnly "com.android.support:appcompat-v7:$rootProject.androidSupportVsersion"
     compileOnly "com.android.support:cardview-v7:$rootProject.androidSupportVsersion"
     compileOnly "com.android.support:design:$rootProject.androidSupportVsersion"
@@ -121,17 +120,17 @@ dependencies {
     compileOnly "com.android.support:recyclerview-v7:$rootProject.androidSupportVsersion"
     compileOnly "com.android.support.constraint:constraint-layout:$rootProject.constraintLayoutVersion"
 
+    compileOnly "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
+
+
     compileOnly "io.reactivex.rxjava2:rxjava:$rootProject.rxJavaVersion"
     compileOnly "io.reactivex.rxjava2:rxandroid:$rootProject.rxAndroidVersion"
     compileOnly "com.tbruyelle.rxpermissions2:rxpermissions:$rootProject.rxpermissions2Version"
 
     compileOnly "org.greenrobot:eventbus:$rootProject.eventBusVersion"
 
-    compileOnly "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
-    compileOnly "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
-    compileOnly "com.squareup.retrofit2:converter-scalars:$rootProject.retrofitVersion"
-    compileOnly "com.squareup.retrofit2:adapter-rxjava2:$rootProject.retrofitVersion"
-
+    compileOnly "com.google.code.gson:gson:$rootProject.gsonVersion"
+    compileOnly "com.squareup.okhttp3:okhttp:$rootProject.okHttpVersion"
 }
 
 //./gradlew bintrayUpload
