--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -30,9 +31,10 @@
         <activity android:name=".TestDelegateActivity"></activity>
         <activity android:name=".TestNotificationActivity" />
         <activity android:name=".TestFingerprintActivity" />
+	    <activity android:name=".TestNetActivity" />
 
 
-        <!--AutoSize屏幕适配-->
+	    <!--AutoSize屏幕适配-->
         <meta-data
             android:name="design_width_in_dp"
             android:value="360" />
