Base 类优化， 网络监听优化，，新增通知Util，Alert，摇一摇Debug，webviewActivity

--- a/Kommon/src/main/AndroidManifest.xml
+++ b/Kommon/src/main/AndroidManifest.xml
@@ -1,2 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.luckyaf.kommon" />
+    package="com.luckyaf.kommon" >
+
+	<application>
+		<activity
+			android:name=".widget.webview.WebViewActivity"
+			android:launchMode="singleTop"
+			android:screenOrientation="portrait"
+			android:theme="@style/Theme.Design.NoActionBar"
+			/>
+	</application>
+</manifest>
