--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,10 @@
         <activity android:name=".TestFingerprintActivity" />
 	    <activity android:name=".TestNetActivity" />
         <activity android:name=".TestRecyclerActivity" />
+	    <activity android:name=".TestItemDecorationActivity" />
 
 
-        <!--AutoSize屏幕适配-->
+	    <!--AutoSize屏幕适配-->
         <meta-data
             android:name="design_width_in_dp"
             android:value="360" />
