--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         kotlinCoroutinesVersion = '1.1.0'
         //
         eventBusVersion = '3.1.1'
+        mmkvVersion = '1.0.16'
 
         // rx   dependencies
         rxJavaVersion = '2.2.3'
