--- a/Kommon/build.gradle
+++ b/Kommon/build.gradle
@@ -1,10 +1,11 @@
-apply plugin: 'com.android.library'
 
+apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.hujiang.android-aspectjx'
+apply plugin: 'kotlin-kapt'
+
 
 
 
@@ -22,17 +23,20 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
-        multiDexEnabled true
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        multiDexEnabled true
     }
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
         }
+    }
+    lintOptions {
+        abortOnError false
+        quiet true
     }
 
 }
@@ -108,6 +112,8 @@ bintray {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$rootProject.kotlinCoroutinesVersion"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$rootProject.kotlinCoroutinesVersion"
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$rootProject.kotlinVersion"
@@ -122,7 +128,7 @@ dependencies {
     api "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
     api "io.reactivex.rxjava2:rxjava:$rootProject.rxJavaVersion"
     api "io.reactivex.rxjava2:rxandroid:$rootProject.rxAndroidVersion"
-    api "com.tbruyelle.rxpermissions2:rxpermissions:$rootProject.rxpermissions2Version"
+   // api "com.tbruyelle.rxpermissions2:rxpermissions:$rootProject.rxpermissions2Version"
     api "com.google.code.gson:gson:$rootProject.gsonVersion"
     api "com.squareup.okhttp3:okhttp:$rootProject.okHttpVersion"
     api "com.tencent:mmkv:$rootProject.mmkvVersion"
@@ -137,10 +143,20 @@ dependencies {
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.leakcanaryVersion"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$rootProject.leakcanaryVersion"
 
-
-
+    // 悬浮窗：https://github.com/getActivity/XToast
+    // 网络请求：https://github.com/zhou-you/RxEasyHttp
+    // RxJava: https://github.com/ReactiveX/RxAndroid
+    // RecyclerView：https://github.com/CymChad/BaseRecyclerViewAdapterHelper
+    // 工具类：https://github.com/Blankj/AndroidUtilCode
+    // 图片选择：https://github.com/zhihu/Matisse
+    // 上拉下拉：https://github.com/bingoogolapple/BGARefreshLayout-Android
+    // 轮播图：https://github.com/bingoogolapple/BGABanner-Android
+    // 二维码：https://github.com/bingoogolapple/BGAQRCode-Android
+    // 第三方支付：https://github.com/getActivity/RxPay
+    // Log 打印：https://github.com/JakeWharton/timber
 
 }
+
 
 //./gradlew bintrayUpload
 //./gradlew clean build bintrayUpload
