--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ kapt {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //implementation "com.luckyaf:kommon:0.0.6"
-    implementation project(":kommon")
+    implementation "com.luckyaf:kommon:0.3.0"
+    //implementation project(":kommon")
 }
 
 
