修复 网络请求参数值为Int时异常的bug 修复 权限请求 在 6.0以下直接 报错的bug 修复 activityManager可能存在的内存泄漏问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ kapt {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.luckyaf:kommon:0.3.0"
-    //implementation project(":kommon")
+    //implementation "com.luckyaf:kommon:0.4.1"
+    implementation project(":kommon")
 }
 
 
