--- a/Kommon/build.gradle
+++ b/Kommon/build.gradle
@@ -1,4 +1,3 @@
-
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
@@ -7,17 +6,15 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 
-
-
 def siteUrl = 'https://github.com/luckyAF/KommonMaster' //项目在github主页地址
 def gitUrl = 'https://github.com/luckyAF/KommonMaster.git'   //Git仓库的地址
 
 group = "com.luckyaf"//发布aar前缀根节点
 
-version = "0.3.2"//发布aar的库版本
+version = "0.3.7" //发布aar的库版本
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.ext.compileSdkVersion
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
