--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,10 @@ buildscript {
     ext{
         // Sdk and tools
         compileSdkVersion = 28
-        minSdkVersion = 19
+        minSdkVersion = 16
         targetSdkVersion = 28
         versionCode = 5
-        versionName = '0.0.5'
+        versionName = '0.4.0'
         // App dependencies
         androidSupportVsersion = '28.0.0'
         constraintLayoutVersion = '1.1.3'
@@ -25,8 +25,8 @@ buildscript {
         rxpermissions2Version = '0.9.5@aar'
 
         // network dependencies
-        retrofitVersion = '2.4.0'
-        okHttpVersion = '4.1.0'
+        //okhttp 3.13 开始只支持5.0
+        okHttpVersion = '3.12.0'
         gsonVersion = '2.8.5'
         fastjsonVersion = '1.2.51'
 
@@ -55,7 +55,6 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
         google()
         jcenter()
         maven { url "https://maven.google.com" }
@@ -63,6 +62,8 @@ allprojects {
     }
 
 }
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
