--- a/Kommon/build.gradle
+++ b/Kommon/build.gradle
@@ -20,7 +20,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
 
@@ -115,13 +115,13 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$rootProject.kotlinVersion"
     api "org.jetbrains.kotlin:kotlin-reflect:$rootProject.kotlinVersion"
 
-    api "com.android.support:appcompat-v7:$rootProject.androidSupportVsersion"
-    api "com.android.support:cardview-v7:$rootProject.androidSupportVsersion"
-    api "com.android.support:design:$rootProject.androidSupportVsersion"
-    api "com.android.support:support-annotations:$rootProject.androidSupportVsersion"
-    api "com.android.support:recyclerview-v7:$rootProject.androidSupportVsersion"
-    api "com.android.support.constraint:constraint-layout:$rootProject.constraintLayoutVersion"
-    api "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
+    api 'androidx.appcompat:appcompat:1.0.0'
+    api 'androidx.cardview:cardview:1.0.0'
+    api 'com.google.android.material:material:1.0.0'
+    api 'androidx.annotation:annotation:1.0.0'
+    api 'androidx.recyclerview:recyclerview:1.0.0'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     api "io.reactivex.rxjava2:rxjava:$rootProject.rxJavaVersion"
     api "io.reactivex.rxjava2:rxandroid:$rootProject.rxAndroidVersion"
    // api "com.tbruyelle.rxpermissions2:rxpermissions:$rootProject.rxpermissions2Version"
@@ -134,8 +134,8 @@ dependencies {
 
     // test
     testImplementation "junit:junit:$rootProject.junitVersion"
-    androidTestImplementation "com.android.support.test:runner:$rootProject.runnerVersion"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.espressoVersion"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
     // 悬浮窗：https://github.com/getActivity/XToast
     // 网络请求：https://github.com/zhou-you/RxEasyHttp
