--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,6 @@ org.gradle.jvmargs=-Xmx2536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-android.useAndroidX=false
+android.useAndroidX=true
 android.enableBuildCache=false
+android.enableJetifier=true
