转Android 0.7  修复四舍五入问题

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,11 @@ allprojects {
         maven { url "https://maven.google.com" }
         maven { url 'https://jitpack.io' }
     }
+    // 下面三行
+    tasks.withType(Javadoc) { // 新增
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+    }
 
 }
 
