--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         applicationId "com.luckyaf.kommonmaster"
