--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         androidSupportVsersion = '28.0.0'
         constraintLayoutVersion = '1.1.3'
         archLifecycleVersion = '1.1.1'
-        kotlinVersion = '1.3.41'
+        kotlinVersion = '1.3.72'
         kotlinCoroutinesVersion = '1.1.0'
         //
         eventBusVersion = '3.1.1'
@@ -31,7 +31,7 @@ buildscript {
         fastjsonVersion = '1.2.51'
 
         // test
-        junitVersion = '4.12'
+        junitVersion = '4.13'
         runnerVersion = '1.0.2'
         coreTestingVersion = '2.0.0'
         espressoVersion = '3.0.2'
@@ -43,7 +43,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4' //添加此行
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1' //添加此行
@@ -57,8 +57,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url "https://maven.google.com" }
-        maven { url 'https://jitpack.io' }
+        mavenCentral ()
+        maven { url "https://jitpack.io" }
+        maven {url 'https://dl.bintray.com/jetbrains/anko'} //这是你需要加入的，这个是解决这个问题的关键地方，我就是添加这个maven后不再报上面的错误了
+        maven {url "https://maven.google.com"} //谷歌广告
+
     }
     // 下面三行
     tasks.withType(Javadoc) { // 新增
