--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ buildscript {
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
     }
     dependencies {
