--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,12 @@
-//include ':app'
-//rootProject.name = "KommonMaster"
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        jcenter() // Warning: this repository is going to shut down soon
+        maven { url "https://jitpack.io" }
+    }
+}
+rootProject.name = "KommonMaster"
+include ':app'
 include ':kommon'
