--- a/Kommon/build.gradle
+++ b/Kommon/build.gradle
@@ -7,7 +7,10 @@ plugins {
     id 'maven-publish'
 }
 
-
+task sourceJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier "sources"
+}
 
 
 afterEvaluate {
